--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="preload" href="/public/img/avatar.jpg" as="image" />
+  <link rel="preload" href="fonts.css" as="style" />
   <link rel="preload" href="styles.css" as="style" />
 
   <meta charset="UTF-8">
@@ -13,6 +14,7 @@
   <meta property="og:image" content="http://gu3.me" />
   <meta property="og:description" content="Programmer from the UK" />
   <meta name="description" content="Alex Guthrie is a programmer from the UK." />
+  <link rel="stylesheet" href="fonts.css" />
   <link rel="stylesheet" href="styles.css" />
   <title>Alex Guthrie</title>
 </head>
