--- a/index.html
+++ b/index.html
@@ -21,15 +21,12 @@
 
 <body>
   <nav>
-    <p>Alex Guthrie // Programmer from the UK</p>
+    <p>Alex Guthrie - Programmer from the UK</p>
     <span class="fill"></span>
     <span>
-      <a href="https://blog.gu3.me/">Blog</a>
-      <span class="divider">//</span>
-      <a href="https://github.com/xezno">Github</a>
-      <a href="https://twitter.com/realxezno">X (Twitter)</a>
+      <a href="https://github.com/xezno">GitHub</a>
+      <a href="https://twitter.com/realxezno">Twitter</a>
       <a href="https://www.twitch.tv/realxezno">Twitch</a>
-      <a href="https://open.spotify.com/user/alexguthrie">Spotify</a>
     </span>
   </nav>
 
@@ -48,10 +45,6 @@
     <section>
       <h2>Skills</h2>
 
-      <b>Languages / Frameworks</b>
-      <p>Unity, Unreal, C#, C++, TypeScript, JavaScript, SCSS, Vue, Docker, PostgreSQL, Python, Rust</p>
-
-      <b>Domains</b>
       <ul>
         <li><b>2D and 3D game development</b>: Experienced in writing C# code for use in game engines (such as S&box and Unity) and as desktop applications</li>
         <li><b>Desktop applications in C++ and C#</b>: Experienced in writing efficient native code for desktop applications in C++ and C#</li>
@@ -65,19 +58,50 @@
     <section>
       <h2>Projects</h2>
 
-      <b>Work</b>
+      <div class="projects">
 
-      <ul>
-        <li><a href="https://sbox.facepunch.com/">s&box</a> - A game platform by Facepunch Studios, and the spiritual successor to Garry's Mod.</li>
-      </ul>
+        <div class="project-card">
+          <img src="/public/img/projects/sbox.jpg" />
 
-      <b>Personal</b>
+          <span>
+            <b>s&box</b>
+            <p>A game platform by Facepunch Studios, and the spiritual successor to Garry's Mod.</p>
+            <a href="https://sbox.game/">Website</a>
+          </span>
+        </div>
 
-      <ul>
-        <li><a href="https://github.com/themeparkworld/opentpw">OpenTPW</a> - An open source reimplementation of the game Sim Theme Park / Theme Park World</li>
-        <li><a href="https://github.com/mocha-engine/mocha">Mocha</a> - A game engine written in C++ with C# interop</li>
-        <li><a href="https://github.com/The-Tin-Foil-Hat-Society/tin">Tin</a> - A programming language written in C, targeting RISC-V</li>
-      </ul>
+        <div class="project-card">
+          <img src="/public/img/projects/opentpw.png" />
+
+          <span>
+            <b>OpenTPW</b>
+            <p>An open source reimplementation of the game Sim Theme Park / Theme Park World.</p>
+            <a href="https://github.com/themeparkworld/opentpw">GitHub</a>
+          </span>
+        </div>
+
+        <div class="project-card">
+          <img src="/public/img/projects/mocha.png" />
+
+          <span>
+            <b>Mocha</b>
+            <p>A simple game engine written in C++ with C# interop.</p>
+            <a href="https://github.com/mocha-engine/mocha">GitHub</a>
+          </span>
+        </div>
+
+        <div class="project-card">
+          <img src="/public/img/projects/tin.png" />
+
+          <span>
+            <b>Tin</b>
+            <p>A programming language written in C, targeting RISC-V.</p>
+            <a href="https://github.com/The-Tin-Foil-Hat-Society/tin">GitHub</a>
+          </span>
+        </div>
+
+      </div>
+
     </section>
 
     <hr />
@@ -85,7 +109,7 @@
     <section>
       <h2>Contact Me</h2>
 
-      <p>You can <a href="mailto:alex@gu3.me">email me</a> or find me on <a href="https://twitter.com/realxezno">X (Twitter)</a>.</p>
+      <p>You can <a href="mailto:alex@gu3.me">email me</a> or find me on <a href="https://twitter.com/realxezno">Twitter</a>.</p>
     </section>
   </main>
 </body>
