Centralised layout update, intro section change

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
   <nav>
-    <p>Alex Guthrie - Programmer from the UK</p>
+    <p>Alex Guthrie</p>
     <span class="fill"></span>
     <span>
       <a href="https://github.com/xezno">GitHub</a>
@@ -32,12 +32,14 @@
 
   <main>
 
-    <section>
-      <img src="/public/img/avatar.jpg" class="avatar" alt="Avatar image" />
-
-      <h2>About</h2>
-      <p>Hey! 👋 I'm Alex. I'm a programmer at Facepunch. I like reverse engineering, computer graphics, and game development.</p>
-      
+    <section class="intro-container">
+      <div class="left">
+        <span class="intro">
+          <h1>Hi, I'm Alex.</h1>
+          <b>A programmer from the UK.</b>
+        </span>
+        <p>I'm a programmer at Facepunch. I like reverse engineering, computer graphics, and game development.</p>
+      </div>
     </section>
 
     <section>
@@ -61,7 +63,7 @@
 
           <span>
             <b>s&box</b>
-            <p>A game platform by Facepunch Studios, and the spiritual successor to Garry's Mod.</p>
+            <p>A game platform by Facepunch built on Source 2, and the spiritual successor to Garry's Mod.</p>
             <a href="https://sbox.game/">Website</a>
           </span>
         </div>
@@ -71,7 +73,7 @@
 
           <span>
             <b>OpenTPW</b>
-            <p>An open source reimplementation of the game Sim Theme Park / Theme Park World.</p>
+            <p>An open source reimplementation of the classic Bullfrog game Sim Theme Park / Theme Park World.</p>
             <a href="https://github.com/themeparkworld/opentpw">GitHub</a>
           </span>
         </div>
@@ -81,7 +83,7 @@
 
           <span>
             <b>Mocha</b>
-            <p>A simple game engine written in C++ with C# interop.</p>
+            <p>A simple game engine written in C++ with C# interop, a Vulkan renderer, and Jolt physics.</p>
             <a href="https://github.com/mocha-engine/mocha">GitHub</a>
           </span>
         </div>
@@ -91,7 +93,7 @@
 
           <span>
             <b>Tin</b>
-            <p>A programming language written in C, targeting RISC-V.</p>
+            <p>A programming language written in C, with a custom backend targeting RISC-V.</p>
             <a href="https://github.com/The-Tin-Foil-Hat-Society/tin">GitHub</a>
           </span>
         </div>
