Wave emoji, justify text

--- a/index.html
+++ b/index.html
@@ -28,20 +28,16 @@
   <main>
 
     <section class="intro-container">
-      <h1 class="serif">Hi. I'm <i>Alex</i>.</h1>
+      <h1 class="serif">
+        Hi. I'm <i>Alex</i>.
+        <img src="/public/img/wave.svg" alt="Wave" />
+      </h1>
 
       <p>
-        I'm a programmer from the UK working at Facepunch.
-      </p>  
-        <p>
-          I like reverse engineering, graphics programming, and game
-        development. <wbr />
-          I'm also pretty enthusiastic about hardware hacking and electronics, and I'm always looking for new projects to work on.
-        <wbr />
+        I'm a programmer from the UK working at Facepunch. I like reverse engineering, graphics programming, and game development. I'm also pretty enthusiastic about hardware hacking and electronics, and I'm always looking for new projects to work on.
       </p>
       <p>
-        Feel free to check out some of my projects on <a href="https://github.com/xezno">GitHub</a>. <wbr />
-        You can get in touch with me via <a href="mailto:alex@gu3.me">email</a> or <a href="https://twitter.com/realxezno">Twitter</a>.
+        Feel free to check out some of my projects on <a href="https://github.com/xezno">GitHub</a>. You can get in touch with me via <a href="mailto:alex@gu3.me">email</a> or <a href="https://twitter.com/realxezno">Twitter</a>.
       </p>
     </section>
 
