--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:image" content="http://gu3.me" />
   <meta property="og:description" content="Programmer from the UK" />
   <meta name="description" content="Alex Guthrie is a programmer from the UK." />
-  <link rel="stylesheet" href="preflight.css" />
+  <link rel="stylesheet" href="preflight.min.css" />
   <link rel="stylesheet" href="styles.css" />
   <title>Alex Guthrie</title>
 </head>
