--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 
 <head>
+  <link rel="preload" href="styles.css" as="style" />
+  <link rel="preload" href="preflight.min.css" as="style" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Inter:wght@100..900&display=swap" rel="stylesheet">
-  <link rel="preload" href="styles.css" as="style" />
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,6 +17,7 @@
   <meta property="og:image" content="http://gu3.me" />
   <meta property="og:description" content="Programmer from the UK" />
   <meta name="description" content="Alex Guthrie is a programmer from the UK." />
+  
   <link rel="stylesheet" href="preflight.min.css" />
   <link rel="stylesheet" href="styles.css" />
   <title>Alex Guthrie</title>
