--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <meta property="og:image" content="http://gu3.me" />
   <meta property="og:description" content="Programmer from the UK" />
   <meta name="description" content="Alex Guthrie is a programmer from the UK." />
-  
+
   <link rel="stylesheet" href="preflight.min.css" />
   <link rel="stylesheet" href="styles.css" />
   <title>Alex Guthrie</title>
@@ -42,10 +42,10 @@
       <h1 class="serif">
         Hi. I'm <i>Alex</i>.
 
-        <span class="non-mac">
+        <span class="non-mac wave">
           <img src="/public/img/wave.png" alt="Wave" />
         </span>
-        <span class="mac">
+        <span class="mac wave">
           👋
         </span>
       </h1>
